--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -29,7 +29,11 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/25/n11745673.md#1" target="_blank">父梦桂树 子梦黄鹤 奇梦超前预言一生</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/25/n11745673.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1312252136572483-150x120.jpg" align ="left"></a>明朝良相顾鼎臣没有出生之前，他的父亲顾恂偶做一梦，梦中移植桂树。鼎臣出生长大后，曾梦到黄鹤凌空飞来，留下批文“田单火牛”。这二个梦串在一起，竟是一个准确的预言，预兆了顾鼎臣一生中的几个重要时刻。人还未出生，就已为他准备好了人生“剧本”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:59 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/19/n11731628.md#1" target="_blank">清代围棋国手江君辅 被骗卖转祸为福</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/19/n11731628.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/08/1708011731272483-e1502867622988-150x120.jpg" align ="left"></a>江君辅是清朝婺源人，从小就善于下棋，被称为“国手”。在他十七岁那年遭遇了一件离奇怪事，他因棋艺了得，转祸为福。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/12/24/n1952747.md#1" target="_blank">艺术的时空之旅（十一）传统油画技法探究（四）</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/7/12/24/n1952747.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Francois-Louis-Joseph_Watteau_001-150x120.jpg" align ="left"></a>在绘画中，对于每一个环节的处理上尽量保持一定的简单方便相对来讲是很重要的。因为在每一步骤中的目的单一一点儿就容易专心致志以达到成功。比如说在白纸上画一个什么东西，如果什么辅助线、大体形状、整体计划都没有，一上来在一遍之内就要求全因素全部到位那就太难了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11754206.md#1" target="_blank">美失窃小狗现身千里外 15人接力开车送回家</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/30/n11754206.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-103200745-150x120.jpg" align ="left"></a>美国蒙大拿州一只小狗被窃贼偷走，并被带到2,000英里（3,219公里）之外的地方。在动物收容所的号召下，15名志工以接力的方式开车送它回家，让它得以在圣诞佳节之前与主人团聚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:50 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11761463.md#1" target="_blank">神力神迹与神技的磁气民族</a><br></h3>
+研究犹太文化可以激醒浅睡中的“磁气文化 ”——中国文化中的“金神文化”（2-2）
+上篇文章介绍中，提到中国民族事实上仅差一步之遥，实际是地表上的稀有的磁“气”超强民族，而不是外国人称的轻击可碎的磁“器”民族。两者相距太远了！ 不是万里之遥！
+
+磁“器”易碎而不勘一击，形容一个民族，等于给人故意戴错冠，并且很大.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760453.md#1" target="_blank">台湾古典诗：题《台湾汉诗三百首》（二）</a><br></h3> 先贤风雅见真章，典律东宁鲁殿光， 三百珠玑无俗韵，海隅诗史共流芳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/1/n11760446.md#1" target="_blank">诗歌：新年</a><br></h3> 一梦旧岁雪初晴 又闻新年笑语盈 几多缘厚今生遇 但愿真相伴君明......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/12/29/n11753121.md#1" target="_blank">五律：彩虹</a><br></h3> 黑夜依然夜，黎明仍未明。 一命交生死，十年当死生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 12:12 AM			</td></tr>
