--- a/gb/nf3046_5.md
+++ b/gb/nf3046_5.md
@@ -5,6 +5,7 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank">世界各地景点上 那些中国人的故事</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/313042_medium-150x120.jpg" align ="left"></a>有这样一群信仰“真、善、忍”的人们，他们遍布于世界各地，长年坚守在著名的风景点。他们的信息台、展板、横幅形成一道道独特的“风景点”，吸引了成千上万的大陆游客。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 10:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/9/5/n11500047.md#1" target="_blank">每日三退声明精选（2019/09/04）</a><br></h3>听到很多中国百姓维权的新闻，以及很多中共邪党邪恶的整人历史，想想当今中国老百姓生活多不容易，唾弃黑暗腐败无能的中共政府。申明退出中共邪恶的团队组织保平安，顺应天意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月05日 10:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/9/4/n11497649.md#1" target="_blank">每日三退声明精选（2019/09/03）</a><br></h3>虽然本人在十四岁即加入共匪团组织，也退团多年，但是也要效法李大师，宣布彻底脱离这个邪恶团伙，我的孩子也是在学校被入团的，在这里也一并宣布退出吃人不吐渣的邪恶团伙，坚决支持香港人民的正义行动，支持世界上一切反对中共的行动和组织团体，愿共匪组织早日解体，天佑中华！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月04日 11:57 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/9/2/n11492770.md#1" target="_blank">每日三退声明精选（2019/09/01）</a><br></h3>共匪从1949年窃国，到如今已经70年了，人们在共产党的邪恶统治下忍受了70年，抗日时，马被八路军以抗日的名义牵走，文革时，把毛邪灵供奉在墙上，真神的画像却丢掷一旁。毛不信神，却让人拜他，瞻仰他，毛向红卫兵高呼万岁，邪恶的共产党以此毒害了很多人，老一辈的长辈不愿谈起过去的事情，是因为现在邪党歪风横行，有价值的人，得不到释放，在牢狱中度过最美丽的年纪，没价值的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 11:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/31/n11489622.md#1" target="_blank">每日三退声明精选（2019/08/30）</a><br></h3>从香港这个第一个采行一国两制的地方，我们看到了当共产党一步一步的渗透香港后，香港人的惊恐，他们从来没有生活在共产主义社会下，现在他们发觉一切都变了，也真正感受到失去了自由民主的可怕，我明白了共产党的邪恶，那么的隐蔽，背地里却做了那么多坏事，对国内大行封锁，这不是很可耻吗？还有谁想被骗？在此声明退出少先队、共青团、共产党，永远不再和中共邪党有任何瓜葛，期盼自由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 11:26 AM							</td></tr>
@@ -31,6 +32,5 @@
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/8/1/n11422573.md#1" target="_blank">每日三退声明精选（2019/07/31）</a><br></h3>本人小学时莫名其妙被入了队，到了中学就觉得共党的话“假大空”，团书记几次让我入团我都坚决拒绝，长大了翻墙看到了海外新闻，更觉得共党邪恶，现声明退出恶党一切组织，绝不与恶魔为伍。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月01日 10:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/30/n11417960.md#1" target="_blank">每日三退声明精选（2019/07/29）</a><br></h3>本人在亿丰汽车城买房子，被黑社会性质的公司骗了，同时很多人被骗，政府不作为，官黑勾结，为我们说话的好记者竟然被公安给抓了，这是什么世道！我们到处求告无门，政府腐败透顶。从这件事看清中共黑社会、恐怖治国的手段，退出曾经被骗加入的共青团、少先队。不做邪恶政权的接班人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月30日 11:02 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/29/n11415712.md#1" target="_blank">每日三退声明精选（2019/07/28）</a><br></h3>大学时期，被迫入党，1.入党申请书并非本人撰写，是由班级支书在本人不知情的情况下撰写并提交。2.入党宣读时本人为醉酒状态并没有完成宣读过程便中途离场。3.即便是1和2两种情况下还是被入了党。之后了解到该党对我华夏民族的摧残，对中国共产党已经达到厌恶至极的程度，在退党无法的情况，今日特此在这里发表声明，以表退出恶党之态度。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月29日 11:25 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/19/7/27/n11412484.md#1" target="_blank">每日三退声明精选（2019/07/26）</a><br></h3>我是一名退休机关干部，很高兴在外出考察专案过程中，听到三退保平安的事，中共邪党就应了老百姓的话了“见过骗子，但是没见过象中共邪党这样的骗子，见过耍流氓的，没见过中共邪党这样耍流氓的”，眼下香港也乱了，哪里有它，哪里就出事，中共邪党就是流氓就是恶棍，眼下中共邪党就是世界第一贪腐邪党，我听说瑞士银行要对存在那里的中共邪党贪污官员财产曝光，中共邪党的外交部竟然指责.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月27日 11:21 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_5.md#1<br><a href="https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zdqyi2905/djy/blob/master/gb/nf3046_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nf3046_5.htm">http://www.epochtimes.com/gb/nf3046_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
