--- a/gb/news392_4.md
+++ b/gb/news392_4.md
@@ -19,7 +19,19 @@
 
 关爱和保护儿童是人类的天性。对于这个世界上的孩子来说，无论他出生在哪里，无论他生活在何处，都应得到家庭和社会最好的关怀和呵护。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 9:33 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/5/n11770319.md#1" target="_blank">王友群：挪威图书馆风波背后的真相</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/5/n11770319.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/hongchuan-600x400-150x120.jpg" align ="left"></a>近日，中国滑雪队领队要求挪威图书馆下架中文版《转法轮》，引发国际媒体关注。挪威新闻网站《今日挪威》、挪威报纸《Adresseavisen》、德国之声、自由亚洲电台、中央社、《苹果日报》、The News Lens、澳洲新闻网等都做了报道。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 5:28 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/4/n11768330.md#1" target="_blank">【名家专栏】环保少女桑伯格：左派的鲜活解读</a><br></h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/4/n11768330.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193255184-webcrop-1200x720-150x120.jpg" align ="left"></a>要理解左派（不是指自由主义者）代表什么并不容易。如果你问一个基督徒读什么书来学习基督教的基本知识，他会告诉你圣经。如果你问一个（信教的）犹太人，他会告诉你希伯来圣经和犹太法典。如果你问一个摩门教徒，他们会告诉你圣经和摩门经。问一个穆斯林，他们会告诉你可兰经。但如果你问一位左派人士，你应该读哪一两本书来理解左派激进主义时.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 3:01 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/8/n11776340.md#1" target="_blank">祝君安：一剪梅?新年新气象</a><br></h3>赤匪运尽人离走
+俊杰三退
+幸登方舟
+迷中谁犹恋红楼
+劫难来时
+陪葬魔兽
+
+善者欣喜恶人愁
+天降九评
+振聋神州
+中美贸谈改结构
+香江怒吼
+台庆自由......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 2:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/zdqyi2905/djy/blob/master/gb/20/1/7/n11774213.md#1" target="_blank">关乐：小康年 大役现</a><br></h3>二零二零年，党宣小康年。
 二零一九冬，鼠疫蒙京现。
 岁末武汉冒，不明之肺炎。
